Use lux sensor instead of sun sensor

--- a/packages/rooms/bathroom.yaml
+++ b/packages/rooms/bathroom.yaml
@@ -9,8 +9,10 @@ automation:
     alias: Bathroom - Moon On at Sunset
     description: ''
     trigger:
-    - platform: sun
-      event: sunset
+      - platform: numeric_state
+        entity_id: sensor.entry_sensor_illuminance_lux
+        below: 200
+        for: "00:05:00"
     condition: []
     action:
     - service: light.turn_on
@@ -24,8 +26,10 @@ automation:
     alias: Bathroom - Moon Off at sunrise
     description: ''
     trigger:
-    - platform: sun
-      event: sunrise
+      - platform: numeric_state
+        entity_id: sensor.entry_sensor_illuminance_lux
+        above: 200
+        for: "00:15:00"
     condition: []
     action:
     - service: light.turn_off
