--- a/packages/rooms/driveway.yaml
+++ b/packages/rooms/driveway.yaml
@@ -14,9 +14,9 @@ automation:
       from: 'off'
       to: 'on'
     condition:
-    - condition: sun
-      after: sunset
-      after_offset: -01:00:00
+    - condition: numeric_state
+      entity_id: sensor.entry_sensor_illuminance_lux
+      below: 200
     action:
     - service: light.turn_on
       entity_id: light.driveway_lights
@@ -37,14 +37,9 @@ automation:
       from: 'off'
       to: 'on'
     condition:
-    - condition: or
-      conditions:
-      - condition: sun
-        before: sunrise
-        before_offset: '-1:00:00'
-      - condition: sun
-        after: sunset
-        after_offset: '-1:00:00'
+    - condition: numeric_state
+      entity_id: sensor.entry_sensor_illuminance_lux
+      below: 200
     action:
     - service: light.turn_on
       entity_id: light.driveway_lights
@@ -188,14 +183,9 @@ automation:
       from: 'off'
       to: 'on'
     condition:
-    - condition: or
-      conditions:
-      - condition: sun
-        before: sunrise
-        before_offset: '-1:00:00'
-      - condition: sun
-        after: sunset
-        after_offset: '-1:00:00'
+      - condition: numeric_state
+        entity_id: sensor.entry_sensor_illuminance_lux
+        below: 200
     action:
     - service: light.turn_on
       entity_id: light.driveway_lights
@@ -217,9 +207,9 @@ automation:
       zone: zone.home
       event: enter
     condition:
-    - condition: sun
-      before: sunrise
-      after: sunset
+    - condition: numeric_state
+      entity_id: sensor.entry_sensor_illuminance_lux
+      below: 200
     action:
     - service: light.turn_on
       entity_id: light.driveway_lights
