--- a/packages/rooms/bedroom.yaml
+++ b/packages/rooms/bedroom.yaml
@@ -47,7 +47,7 @@ automation:
     - service: light.turn_on
       data_template:
         entity_id: light.bedroom_led
-        brightness_pct: 40
+        brightness_pct: 30
         color_name: '{% if is_state(''light.lucas_lights'', ''on'') and is_state(''light.xander_lights'',
           ''on'') %} red {% elif is_state(''light.lucas_lights'', ''off'') and is_state(''light.xander_lights'',
           ''on'') %} green {% elif is_state(''light.lucas_lights'', ''on'') and is_state(''light.xander_lights'',
@@ -109,6 +109,10 @@ automation:
     - service: script.turn_on
       data:
         entity_id: script.turn_tv_lights_off
+    - service: light.turn_on
+      data:
+        entity_id: light.big_lightbulb
+        brightness_pct: 100
     mode: single
   - id: '1611015024886'
     alias: Bedroom - Right Button
@@ -131,6 +135,9 @@ automation:
     - service: script.turn_on
       data:
         entity_id: script.turn_tv_lights_off
+    - service: light.turn_off
+      data:
+        entity_id: light.big_lightbulb
     mode: single
   - id: '1619755214062'
     alias: Bedroom - External Button
