--- a/packages/rooms/garage.yaml
+++ b/packages/rooms/garage.yaml
@@ -91,7 +91,7 @@ automation:
       - condition: template
         value_template: "{{ is_state('timer.garage_mcl', 'active') }}"
     action:
-      service: input_boolean.turn_off
+      service: input_boolean.toggle
       entity_id: input_boolean.garage_mcl
   - id: '1618649719647'
     alias: Garage - Light MCL Re-Enable
