--- a/packages/netdata.yaml
+++ b/packages/netdata.yaml
@@ -20,6 +20,9 @@ sensor:
       system_cpu_idle:
         data_group: system.cpu
         element: "idle"
+      system_cpu_iowait:
+        data_group: system.cpu
+        element: "iowait"
   - platform: netdata
     host: "192.168.0.9"
     port: "19999"
@@ -41,3 +44,111 @@ sensor:
       system_cpu_idle:
         data_group: system.cpu
         element: "idle"
+      system_cpu_iowait:
+        data_group: system.cpu
+        element: "iowait"
+  - platform: filter
+    name: "Dock Smoothed CPUfreq"
+    entity_id: sensor.dock_core0_freq
+    filters:
+      - filter: outlier
+        window_size: 4
+        radius: 4.0
+      - filter: lowpass
+        time_constant: 10
+        precision: 2
+  - platform: filter
+    name: "Dock Smoothed CPU System"
+    entity_id: sensor.dock_system_cpu_system
+    filters:
+      - filter: outlier
+        window_size: 4
+        radius: 4.0
+      - filter: lowpass
+        time_constant: 10
+        precision: 2
+  - platform: filter
+    name: "Dock Smoothed CPU User"
+    entity_id: sensor.dock_system_cpu_user
+    filters:
+      - filter: outlier
+        window_size: 4
+        radius: 4.0
+      - filter: lowpass
+        time_constant: 10
+        precision: 2
+  - platform: filter
+    name: "Dock Smoothed CPU Idle"
+    entity_id: sensor.dock_system_cpu_idle
+    filters:
+      - filter: outlier
+        window_size: 4
+        radius: 4.0
+      - filter: lowpass
+        time_constant: 10
+        precision: 2
+  - platform: filter
+    name: "Dock Smoothed CPU Iowait"
+    entity_id: sensor.dock_system_cpu_iowait
+    filters:
+      - filter: outlier
+        window_size: 4
+        radius: 4.0
+      - filter: lowpass
+        time_constant: 10
+        precision: 2
+  
+  
+  
+  
+  - platform: filter
+    name: "Piserve Smoothed CPUfreq"
+    entity_id: sensor.piserve_core0_freq
+    filters:       
+      - filter: outlier
+        window_size: 4
+        radius: 4.0
+      - filter: lowpass
+        time_constant: 10
+        precision: 2
+  - platform: filter
+    name: "Piserve Smoothed CPU System"
+    entity_id: sensor.piserve_system_cpu_system
+    filters:
+      - filter: outlier
+        window_size: 4
+        radius: 4.0
+      - filter: lowpass
+        time_constant: 10
+        precision: 2
+  - platform: filter
+    name: "Piserve Smoothed CPU User"
+    entity_id: sensor.piserve_system_cpu_user
+    filters:
+      - filter: outlier
+        window_size: 4
+        radius: 4.0
+      - filter: lowpass
+        time_constant: 10
+        precision: 2
+  - platform: filter
+    name: "Piserve Smoothed CPU Idle"
+    entity_id: sensor.piserve_system_cpu_idle
+    filters:
+      - filter: outlier
+        window_size: 4
+        radius: 4.0
+      - filter: lowpass
+        time_constant: 10
+        precision: 2
+  - platform: filter
+    name: "Piserve Smoothed CPU Iowait"
+    entity_id: sensor.piserve_system_cpu_iowait
+    filters:
+      - filter: outlier
+        window_size: 4
+        radius: 4.0
+      - filter: lowpass
+        time_constant: 10
+        precision: 2
+  
