--- a/packages/rooms/driveway.yaml
+++ b/packages/rooms/driveway.yaml
@@ -14,9 +14,9 @@ automation:
       from: 'off'
       to: 'on'
     condition:
-    - condition: numeric_state
-      entity_id: sensor.entry_sensor_illuminance_lux
-      below: 200
+    - condition: state
+      entity_id: input_boolean.night_mode
+      state: "on"
     action:
     - service: light.turn_on
       entity_id: light.driveway_lights
@@ -37,9 +37,9 @@ automation:
       from: 'off'
       to: 'on'
     condition:
-    - condition: numeric_state
-      entity_id: sensor.entry_sensor_illuminance_lux
-      below: 200
+    - condition: state
+      entity_id: input_boolean.night_mode
+      state: "on"
     action:
     - service: light.turn_on
       entity_id: light.driveway_lights
@@ -77,7 +77,7 @@ automation:
     description: ''
     trigger:
     - platform: state
-      entity_id: binary_sensor.top_of_driveway_yard_car_motion
+      entity_id: binary_sensor.top_of_driveway_topyard_car_motion
       from: 'off'
       to: 'on'
     condition: []
@@ -86,11 +86,11 @@ automation:
       data:
         message: A car was detected
         data:
-          image: /api/camera_proxy/camera.yard_car
+          image: /api/camera_proxy/camera.topyard_car
           actions:
             - action: URI
               title: "Open Camera"
-              uri: https://frigate.adebenham.com/cameras/yard
+              uri: https://frigate.adebenham.com/cameras/topyard
     - delay:
         minutes: 3
     mode: single
@@ -130,11 +130,11 @@ automation:
       data:
         message: A person was detected at the top of the driveway
         data:
-          image: /api/camera_proxy/camera.yard_person
+          image: /api/camera_proxy/camera.topyard_person
           actions:
             - action: URI
               title: "Open Camera"
-              uri: https://frigate.adebenham.com/cameras/yard
+              uri: https://frigate.adebenham.com/cameras/topyard
     - delay:
         minutes: 5
     mode: single
@@ -183,9 +183,9 @@ automation:
       from: 'off'
       to: 'on'
     condition:
-      - condition: numeric_state
-        entity_id: sensor.entry_sensor_illuminance_lux
-        below: 200
+      - condition: state
+        entity_id: input_boolean.night_mode
+        state: "on"
     action:
     - service: light.turn_on
       entity_id: light.driveway_lights
@@ -207,9 +207,9 @@ automation:
       zone: zone.home
       event: enter
     condition:
-    - condition: numeric_state
-      entity_id: sensor.entry_sensor_illuminance_lux
-      below: 200
+    - condition: state
+      entity_id: input_boolean.night_mode
+      state: "on"
     action:
     - service: light.turn_on
       entity_id: light.driveway_lights
