--- a/packages/weather.yaml
+++ b/packages/weather.yaml
@@ -1,4 +1,7 @@
 sensor:
+  - platform: min_max
+    entity_ids:
+      - sensor.holman_ws5029_65068_ws
   - platform: template
     sensors:
       bom_current_text:
