--- a/packages/duskdawn.yaml
+++ b/packages/duskdawn.yaml
@@ -16,11 +16,10 @@ automation:
         at: "18:30:00"
       - platform: sun
         event: sunset
-        offset: "00:30:00"
     condition: []
     action:
     - service: input_boolean.turn_on
-      entity_id: light.night_mode
+      entity_id: input_boolean.night_mode
     mode: single
   - id: '1620862057648'
     alias: Night Mode - turn off
@@ -34,7 +33,6 @@ automation:
         at: "06:30:00"
       - platform: sun
         event: sunrise
-        offset: "-00:30:00"
     condition: []
     action:
     - service: input_boolean.turn_off
