--- a/www/floorplan/Deane-overhead.yaml
+++ b/www/floorplan/Deane-overhead.yaml
@@ -35,7 +35,7 @@ rules:
         class: '${(entity.state === "on") ? "light-on" : "light-off"}'
   - entities:
       - sensor.xander_bedroom_sensor_temperature
-      - sensor.holman_ws5029_65068_t
+      - sensor.outside_temperature
       - sensor.livingroom_temperature
       - sensor.office_temperature
       - sensor.carport_sensor_temperature
