--- a/packages/rooms/driveway.yaml
+++ b/packages/rooms/driveway.yaml
@@ -218,3 +218,43 @@ automation:
     - service: light.turn_off
       entity_id: light.driveway_lights
     mode: restart
+
+  - alias: Notify
+    trigger:
+      - platform: state
+        entity_id: sensor.double_take_driveway
+      - platform: state
+        entity_id: sensor.double_take_topyard
+      - platform: state
+        entity_id: sensor.double_take_unknown
+    condition:
+      - condition: template
+        value_template: '{{ trigger.to_state.state != trigger.from_state.state }}'
+    action:
+      - service: notify.mobile_app
+        data:
+          message: |-
+            {% if trigger.to_state.attributes.match is defined %}
+              {{trigger.to_state.attributes.friendly_name}} is near the {{trigger.to_state.state}} @ {{trigger.to_state.attributes.match.confidence}}% by {{trigger.to_state.attributes.match.detector}}:{{trigger.to_state.attributes.match.type}} taking {{trigger.to_state.attributes.attempts}} attempt(s) @ {{trigger.to_state.attributes.duration}} sec
+            {% elif trigger.to_state.attributes.unknown is defined %}
+              unknown is near the {{trigger.to_state.state}} @ {{trigger.to_state.attributes.unknown.confidence}}% by {{trigger.to_state.attributes.unknown.detector}}:{{trigger.to_state.attributes.unknown.type}} taking {{trigger.to_state.attributes.attempts}} attempt(s) @ {{trigger.to_state.attributes.duration}} sec
+            {% endif %}
+          data:
+            attachment:
+              url: |-
+                {% if trigger.to_state.attributes.match is defined %}
+                  http://localhost:3000/api/storage/matches/{{trigger.to_state.attributes.match.filename}}?box=true&token={{trigger.to_state.attributes.token}}
+                {% elif trigger.to_state.attributes.unknown is defined %}
+                  http://localhost:3000/api/storage/matches/{{trigger.to_state.attributes.unknown.filename}}?box=true&token={{trigger.to_state.attributes.token}}
+                {% endif %}
+            actions:
+              - action: URI
+                title: View Image
+                uri: |-
+                  {% if trigger.to_state.attributes.match is defined %}
+                    http://localhost:3000/api/storage/matches/{{trigger.to_state.attributes.match.filename}}?box=true&token={{trigger.to_state.attributes.token}}
+                  {% elif trigger.to_state.attributes.unknown is defined %}
+                    http://localhost:3000/api/storage/matches/{{trigger.to_state.attributes.unknown.filename}}?box=true&token={{trigger.to_state.attributes.token}}
+                  {% endif %}
+    mode: parallel
+    max: 10
