--- a/packages/rooms/loungeroom.yaml
+++ b/packages/rooms/loungeroom.yaml
@@ -38,7 +38,7 @@ switch:
         friendly_name: "Loungeroom Full"
         value_template: >
           {% if states('light.lounge_ml') %}
-            {% if state_attr('light.lounge_ml','brightness') == 255 %}
+            {% if state_attr('light.lounge_ml','brightness')|int(0) == 255 %}
               true
             {% else %}
               false
@@ -58,7 +58,7 @@ switch:
         friendly_name: "Loungeroom Medium"
         value_template: >
           {% if states('light.lounge_ml') %}
-            {% if ((state_attr('light.lounge_ml','brightness')|int > 100) and (state_attr('light.lounge_ml','brightness')|int < 200)) %}
+            {% if ((state_attr('light.lounge_ml','brightness')|int(0) > 100) and (state_attr('light.lounge_ml','brightness')|int(0) < 200)) %}
               true
             {% else %}
               false
@@ -78,7 +78,7 @@ switch:
         friendly_name: "Loungeroom Dim"
         value_template: >
           {% if states('light.lounge_ml') %}
-            {% if ((state_attr('light.lounge_ml','brightness')|int < 100) and (state_attr('light.lounge_ml','brightness')|int > 0)) %}
+            {% if ((state_attr('light.lounge_ml','brightness')|int(0) < 100) and (state_attr('light.lounge_ml','brightness')|int(0) > 0)) %}
               true
             {% else %}
               false
@@ -98,7 +98,7 @@ switch:
         friendly_name: "Loungeroom Party"
         value_template: >
           {% if states('light.lounge_ml') %}
-            {% if ((state_attr('light.lounge_ml','brightness')|int < 100) and (state_attr('light.lounge_ml','brightness')|int > 0)) %}
+            {% if ((state_attr('light.lounge_ml','brightness')|int(0) < 100) and (state_attr('light.lounge_ml','brightness')|int(0) > 0)) %}
               true
             {% else %}
               false
@@ -320,7 +320,7 @@ automation:
         milliseconds: 0
     - service: cover.set_cover_position
       data:
-        position: 100
+        position: 99
       target:
         entity_id: cover.loungeroom_blind
     - delay:
@@ -332,7 +332,7 @@ automation:
       target:
         entity_id: cover.loungeroom_blind
       data:
-        position: 99
+        position: 100
     mode: single
   - id: '1623134374989'
     alias: Blinds - Close 1hr after sunset
@@ -363,7 +363,7 @@ automation:
       target:
         entity_id: cover.loungeroom_blind
       data:
-        position: 0
+        position: 1
     - delay:
         hours: 0
         minutes: 0
@@ -371,7 +371,7 @@ automation:
         milliseconds: 0
     - service: cover.set_cover_position
       data:
-        position: 1
+        position: 0
     mode: single
 
 
