--- a/packages/google_assistant.yaml
+++ b/packages/google_assistant.yaml
@@ -60,6 +60,8 @@ google_assistant:
       expose: true
     camera.backyard:
       expose: true
+    camera.driveway:
+      expose: true
     scene.loungeroom_normal:
       expose: true
     scene.loungeroom_low:
@@ -78,3 +80,10 @@ google_assistant:
       expose: true
     cover.loungeroom_blind:
       expose: true
+    light.wled_tree_master:
+      expose: true
+    switch.yard_plug_bottom:
+      expose: true
+    light.wled1_master:
+      expose: true
+    
